--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="container">
             <div class="row">
                 <div class="skills-col-1">
-                    <img src="/images/first.jpg">
+                    <img src="./images/first.jpg">
                 </div>
                 <div class="skills-col-2">
                     <h3 class="sub-title">Skills and Experience</h3>
@@ -63,7 +63,7 @@
         <div class="content">
             <div class="project-card">
                 <div class="project-image">
-                    <img src="/images/personalwebsite.png">
+                    <img src="./images/personalwebsite.png">
                 </div>
                 <div class="project-info">
                     <h4>Personal Portfolio Website</h4>
