--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     <p>I hava a good experience in <span class="highlited">HTML, CSS, and JavaScript.</span>
                     <br>I have a good knowledge in software engineering subjects such as : <span class="highlited">Problem Solving, Object Oriented Programming, Data Structures and Algorithms ...</span>
                     <br>I speak : <span class="highlited">English, Arabic, Turkish.</span>
-                    <br>I have joined <span class="highlited">Amazon Web Servers</span> club at college and we've organized several events there.</p>
+                    <br>I have joined <span class="highlited">IBM Z</span> club at college and we've organized several events there.</p>
                 </div>
             </div>
         </div>
